cabal-version:       2.2
name:                turbohaskell
version:             0.1.0.0
synopsis:            Haskell Web Framework
description:         Turbo Haskell is a full stack framework focused on rapid application development while striving for robust code quality.
license:             NONE
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
-- copyright:
-- category:
build-type:          Simple


common shared-properties
    default-language: Haskell2010
    build-depends:
            base
            , classy-prelude
            , directory
            , string-conversions
            , warp
            , wai
            , mtl
            , blaze-html
            , blaze-markup
            , wai-extra
            , wai
            , http-types
            , inflections
            , text
            , postgresql-simple
            , wai-middleware-static
            , wai-util
            , http-client
            , bytestring
            , network-uri
            , aeson
            , wai-session
            , wai-session-clientsession
            , clientsession
            , pwstore-fast
            , vault
            , data-default
            , random-strings
            , uuid
            , time
            , parsec
            , attoparsec
            , ghc-prim
            , case-insensitive
            , haskell-src-meta
            , template-haskell
            , haskell-src-exts
            , interpolate
            , split
            , containers
            , http-media
            , cookie
            , process
            , newtype-generics
            , countable-inflections
            , typerep-map
            , basic-prelude
            , megaparsec
            , async
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
    hs-source-dirs: .
    ghc-options: -funfolding-use-threshold=16 -optc-O3 -funbox-strict-fields -fconstraint-solver-iterations=100 -fexpose-all-unfoldings -flate-dmd-anal -fspec-constr-keen -fspecialise-aggressively -fstatic-argument-transformation -fmax-worker-args=200

library TurboHaskellFramework
    import: shared-properties
    exposed-modules:
        TurboHaskell.AuthSupport.Authentication
        , TurboHaskell.AuthSupport.Authorization
        , TurboHaskell.AuthSupport.Lockable
        , TurboHaskell.Controller.Param
        , TurboHaskell.Controller.FileUpload
        , TurboHaskell.Controller.Redirect
        , TurboHaskell.Controller.Render
        , TurboHaskell.Controller.RequestContext
        , TurboHaskell.Controller.Session
        , TurboHaskell.DatabaseSupport.Point
        , TurboHaskell.HtmlSupport.Parser
        , TurboHaskell.HtmlSupport.QQ
        , TurboHaskell.HtmlSupport.ToHtml
        , TurboHaskell.LoginSupport.Helper.Controller
        , TurboHaskell.LoginSupport.Helper.View
        , TurboHaskell.LoginSupport.Middleware
        , TurboHaskell.LoginSupport.Types
        , TurboHaskell.ValidationSupport.Types
        , TurboHaskell.ValidationSupport.ValidateCanView
        , TurboHaskell.ValidationSupport.ValidateField
        , TurboHaskell.ValidationSupport.ValidateIsUnique
        , TurboHaskell.View.ConvertibleStrings
        , TurboHaskell.View.Form
        , TurboHaskell.View.Modal
        , TurboHaskell.View.TimeAgo
        , TurboHaskell.Welcome.Controller
        , TurboHaskell.ApplicationContext
        , TurboHaskell.ControllerPrelude
        , TurboHaskell.ControllerSupport
        , TurboHaskell.Environment
        , TurboHaskell.FetchRelated
        , TurboHaskell.FrameworkConfig
        , TurboHaskell.HaskellSupport
        , TurboHaskell.ModelSupport
        , TurboHaskell.NameSupport
        , TurboHaskell.QueryBuilder
        , TurboHaskell.RouterPrelude
        , TurboHaskell.SchemaCompiler
        , TurboHaskell.Server
        , TurboHaskell.ValidationSupport
        , TurboHaskell.ViewErrorMessages
        , TurboHaskell.ViewPrelude
        , TurboHaskell.ViewSupport
        , TurboHaskell.RouterSupport
        , TurboHaskell.Prelude
        , TurboHaskell.ErrorController
        , TurboHaskell.TaskSupport

executable RunDevServer
    import: shared-properties
    main-is: TurboHaskell/IDE/DevServer.hs
    build-depends:
        network
        , unliftio
        , basic-prelude
        , megaparsec
        , async
        , unix
        , fsnotify
        , websockets
        , wai-websockets

executable new-application
    import: shared-properties
    main-is: TurboHaskell/CLI/NewApplication.hs

executable build-generated-code
    import: shared-properties
    main-is: TurboHaskell/CLI/BuildGeneratedCode.hs

executable new-controller
    import: shared-properties
    main-is: TurboHaskell/CLI/NewController.hs
    build-depends:
        unix
        , fsnotify
        , websockets
