cabal-version:       2.2
name:                ihp-datasync-typescript
version:             1.4.0
synopsis:            TypeScript code generation for IHP DataSync
description:         Generates TypeScript type interfaces from the IHP Schema.sql
license:             MIT
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            Database
build-type:          Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

common shared-properties
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , RecordWildCards
        , DefaultSignatures
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , TemplateHaskell
        , OverloadedRecordDot

library
    import: shared-properties
    hs-source-dirs: .
    exposed-modules: IHP.DataSync.TypeScript.Compiler
    build-depends: ihp, ihp-ide, neat-interpolation

executable generate-datasync-types
    import: shared-properties
    build-depends: ihp-datasync-typescript, ihp, ihp-ide, neat-interpolation, with-utf8, text
    hs-source-dirs: .
    main-is: exe/GenerateDataSyncTypes.hs

test-suite spec
    import: shared-properties
    type: exitcode-stdio-1.0
    hs-source-dirs: .
    main-is: Test/Spec.hs
    build-depends: ihp-datasync-typescript, ihp, ihp-ide, megaparsec, neat-interpolation, hspec